-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8311601 | 17.0.9-oracle | Kevin Walls | P4 | Resolved | Fixed | b02 |
| JDK-8296940 | 17.0.6 | Martin Doerr | P4 | Resolved | Fixed | b03 |
| JDK-8311600 | 11.0.21-oracle | Kevin Walls | P4 | Resolved | Fixed | b02 |
| JDK-8297855 | 11.0.18 | Jaroslav BachorĂk | P4 | Resolved | Fixed | b06 |
a terminated thread in AsyncGetCallTrace might cause the acquisition of a lock making AsyncGetCallTrace non-signal-safe.
- backported by
-
JDK-8296940 AsyncGetCallTrace might acquire a lock via JavaThread::thread_from_jni_environment
-
- Resolved
-
-
JDK-8297855 AsyncGetCallTrace might acquire a lock via JavaThread::thread_from_jni_environment
-
- Resolved
-
-
JDK-8311600 AsyncGetCallTrace might acquire a lock via JavaThread::thread_from_jni_environment
-
- Resolved
-
-
JDK-8311601 AsyncGetCallTrace might acquire a lock via JavaThread::thread_from_jni_environment
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/13bcc231
-
Commit
openjdk/jdk17u-dev/175bd059
-
Commit
openjdk/jdk/d4474b58
-
Review
openjdk/jdk11u-dev/1537
-
Review
openjdk/jdk17u-dev/725
-
Review
openjdk/jdk/8446