8285794: AsyncGetCallTrace might acquire a lock via JavaThread::thread_from_jni_environment

Reviewed-by: mdoerr
Backport-of: d4474b5816c2ec8daaf1c905b77d8ba4e23c9439